--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,16 @@ spring.devtools.livereload.enabled=true
 spring.devtools.restart.poll-interval=1000
 spring.devtools.restart.quiet-period=400
 
+jwt.secret=
+logging.level.root=info
+
 # secret properties ??? ??????
 spring.config.import=optional:classpath:application-secret.properties
+
+logging.level.web=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.context=DEBUG
+logging.level.org.springframework.boot.autoconfigure=DEBUG
+logging.level.com.kh.moida=DEBUG
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
