BACK : 로그인, 회원가입, 로그아웃 안정화

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,10 @@ spring.devtools.restart.quiet-period=400
 jwt.secret=
 logging.level.root=info
 
+mybatis.mapper-locations=classpath:mappers/**/*.xml
+mybatis.type-aliases-package=com.kh.moida.model.*
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.configuration.jdbc-type-for-null=null
+
 # secret properties ??? ??????
 spring.config.import=optional:classpath:application-secret.properties
