--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,15 +6,10 @@ spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
 
-spring.devtools.restart.enabled=true
-spring.devtools.livereload.enabled=true
-spring.devtools.restart.poll-interval=1000
-spring.devtools.restart.quiet-period=400
-
 jwt.secret=
 logging.level.root=info
 
-mybatis.mapper-locations=classpath:mappers/**/*.xml
+mybatis.mapper-locations=classpath:/mappers/**/*.xml
 mybatis.type-aliases-package=com.kh.moida.model.*
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.jdbc-type-for-null=null
