noticeController 및 page 작성 but 권한오류

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@ spring.application.name=moida-spring-boot
 server.port=50101
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:oracle:thin:@49.247.45.206:1521/XEPDB1
+spring.datasource.username=SPRINGBOOT
+spring.datasource.password=SPRINGBOOT
 
-jwt.secret=
+jwt.secret=7QXf8wPzDvjsl2aR4Md89Tf0KH1UGCyZ
 logging.level.root=info
 
 mybatis.mapper-locations=classpath:/mappers/**/*.xml
