--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@ spring.application.name=moida-spring-boot
 server.port=50101
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@49.247.45.206:1521/XEPDB1
-spring.datasource.username=SPRINGBOOT
-spring.datasource.password=SPRINGBOOT
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
-jwt.secret=7QXf8wPzDvjsl2aR4Md89Tf0KH1UGCyZ
+jwt.secret=
 logging.level.root=info
 
 mybatis.mapper-locations=classpath:/mappers/**/*.xml
