BACK : CategoryService 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,12 @@ mybatis.type-aliases-package=com.kh.moida.model.*
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.jdbc-type-for-null=null
 
+cloud.aws.credentials.access-key=
+cloud.aws.credentials.secret-key=
+cloud.aws.region.static=kr-standard
+cloud.aws.stack.auto=false
+cloud.aws.s3.endpoint=
+cloud.aws.s3.bucket=
+
 # secret properties ??? ??????
 spring.config.import=optional:classpath:application-secret.properties
