--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ dependencies {
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
     implementation("org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4")
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	
+    implementation("org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE")
+
     
 
     runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
