--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,13 @@ cloud.aws.stack.auto=false
 cloud.aws.s3.endpoint=
 cloud.aws.s3.bucket=
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+server.tomcat.max-swallow-size=10MB
+server.tomcat.max-parameter-count=10000
+server.tomcat.max-part-count=1000
+
 # secret properties ??? ??????
 spring.config.import=optional:classpath:application-secret.properties
