BACK 모임수정 수정

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ repositories {
 }
 
 dependencies {
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -36,7 +37,7 @@ dependencies {
     implementation("org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4")
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation("org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE")
-
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.636'
     
 
     runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
