BACK : application.properties 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@ spring.application.name=moida-spring-boot
 server.port=50101
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 
-jwt.secret=
+jwt.secret=${JWT_SECRET}
 logging.level.root=info
 
 mybatis.mapper-locations=classpath:/mappers/**/*.xml
@@ -14,12 +14,12 @@ mybatis.type-aliases-package=com.kh.moida.model.*
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.jdbc-type-for-null=null
 
-cloud.aws.credentials.access-key=
-cloud.aws.credentials.secret-key=
+cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
+cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
 cloud.aws.region.static=kr-standard
 cloud.aws.stack.auto=false
-cloud.aws.s3.endpoint=
-cloud.aws.s3.bucket=
+cloud.aws.s3.endpoint=${AWS_ENDPOINT}
+cloud.aws.s3.bucket=${AWS_BUCKET}
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
