--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=moida-spring-boot
-server.port=50101
+server.port=${PORT:8080}
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=${DATASOURCE_URL}
