--- a/build.gradle
+++ b/build.gradle
@@ -50,8 +50,8 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs << '-parameters'
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-parameters"
 }
 
 tasks.named('test') {
